Notice for Setting API

--- a/howsettings.html
+++ b/howsettings.html
@@ -36,7 +36,7 @@
 			</div>
 	
 			<div class="row">
-				1.First get the base from <a href="https://airtable.com/shrETigv5SnwoKkWy">this link</a>.<br><br><br>
+				1.First get the base from <a href="https://airtable.com/shrETigv5SnwoKkWy"><b>this link</b></a>.<br><br><br>
 				2.Then Copy the base<br><br><br>
 				3.After that, do like the pictures said<br><br><br>
 				<img src="https://i.loli.net/2018/08/16/5b75303c04ecb.png" width=100%/>
