--- a/settings.html
+++ b/settings.html
@@ -37,24 +37,27 @@
 	
 			<div class="row">
 				<div class="col-md-4 col-md-offset-4 col-xs-6 col-xs-offset-3">
+					These things could be found on <a href="howsettings.html"><b>this page</b></a>.
 					<div class="add-control">
 						<div class="form-group has-feedback">
-							<input type="text" class="in1 form-control" id="in1" placeholder="✍️ Airtable API" />
+							<input type="text" class="in1 form-control" id="in1" placeholder="✍️ Airtable API"/>
 						</div>
 					</div>
 					<div class="add-control">
 						<div class="form-group has-feedback">
-							<input type="text" class="form-control" id="in2" placeholder="✍️ Airtable Base" />
+							<input type="text" class="form-control" id="in2" placeholder="✍️ Airtable Base"/>
 						</div>
 					</div>
 				</div>
 			</div>
+			
 		</div>
 
 		<div class="footer">
 			<h4>
 				Autosaved.<br><br><br>
-				These things could be found on <a href="howsettings.html">this page</a>.<br><br><br><br>
+				Your api key is only on your computer, and your tasks are only on Airtable's server.<br><br><br>
+				<br>
 				Copyright &copy; 2015-2018 Scris Game Studio.<br><br><br>
 				Some CSS is from <a href="http://quentincolus.com/about.html">Quentin</a>.<br><br><br>
 				Every task here will soon be vanished tomorrow, however you can edit the time <a href="how.html">here</a>.<br><br><br>
