--- a/index.html
+++ b/index.html
@@ -71,7 +71,11 @@
 				alert("LocalStorage is currently unsupported, please update your browser.");
 			}else{
 				var storage=window.localStorage;
-			}
+				if(storage.getItem("scristaskapi") == null){
+					alert("Seems that you haven't set the api key. Click ok, and set it now.");
+					window.open("https://scris.top/scristask/settings.html")
+				}
+ 			}
 			
 			var Airtable = require('airtable');
 			var base = new Airtable({
