Change sth unimportant

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 				baseState[id] = {
 					status: "new",
 					id: id,
-					title: "This site uses 🍪 keep track of your tasks"
+					title: "This site uses LocalStorage to keep track of your tasks"
 				};
 				syncState(baseState);
 			}
