--- a/index.html
+++ b/index.html
@@ -60,18 +60,21 @@
 
 		<div class="footer">
 			<h4>
+				Autosaved.<br><br><br>
+				Your api key is only on your computer, and your tasks are only on Airtable's server.<br><br><br>
+				<br>
 				Copyright &copy; 2015-2018 Scris Game Studio.<br><br><br>
 				Some CSS is from <a href="http://quentincolus.com/about.html">Quentin</a>.<br><br><br>
 				Every task here will soon be vanished tomorrow, however you can edit the time <a href="how.html">here</a>.<br><br><br>
 		<a id="settingstoggle">Airtable Sync Settings</a><br><br><br>
 			</h4>
 		</div>
-		<div class="row" id="settings">
+		<div id="settings">
 				<div class="col-md-4 col-md-offset-4 col-xs-6 col-xs-offset-3">
 					These things could be found on <a href="howsettings.html"><b>this page</b></a>.
 					<div class="add-control">
 						<div class="form-group has-feedback">
-							<input type="text" class="in1 form-control" id="in1" placeholder="✍️ Airtable API"/>
+							<input type="text" class="form-control" id="in1" placeholder="✍️ Airtable API"/>
 						</div>
 					</div>
 					<div class="add-control">
@@ -82,8 +85,8 @@
 				</div>
 			</div>
 		<script>
-			$(document).ready(function(){#("settings").hide();});
-                        #("settingstoggle").click(function(){#("settings").toggle();});
+			$(document).ready(function(){$("#settings").hide();});
+                        $("#settingstoggle").click(function(){$("#settings").toggle();});
 			if(!window.localStorage){
 				alert("LocalStorage is currently unsupported, please update your browser.");
 			}else{
@@ -93,7 +96,17 @@
 					window.open("https://scris.top/scristask/settings.html")
 				}
  			}
-			
+					//焦点离开时触发事件
+		$("#in1").on('input propertychange', function(){  
+			var txtChange = $("#in1").val();  		 
+			storage.setItem("scristaskapi",txtChange);
+			console.log("in1")
+		});  
+		$("#in2").on('input propertychange', function(){  
+			var txtChange = $("#in2").val();  		 
+			storage.setItem("scristaskbase",txtChange);
+			console.log("in2")
+		});  
 			var Airtable = require('airtable');
 			var base = new Airtable({
 				apiKey: storage.getItem("scristaskapi")
