Soon fixed bugs, and now settings are directly in index.html
It's unable to edit file with github.com on iPad mini.

--- a/howsettings.html
+++ b/howsettings.html
@@ -52,7 +52,7 @@
 			<h4>
 				Copyright &copy; 2015-2018 Scris Game Studio.<br><br><br>
 				Some CSS is from <a href="http://quentincolus.com/about.html">Quentin</a>.<br><br><br>
-				<a href="settings.html">Back to Settings</a><br><br><br>
+				<a href="index.html">Back to Taskpage</a><br><br><br>
 			</h4>
 		</div>
 			</h4>
