--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 		<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 		<script src="js/airtable.browser.js">
 		</script>
-		<meta name="viewport" content="minimal-ui,width=device-width,user-scalable=no"/>
+		<meta name="viewport" content="minimal-ui,width=device-width"/>	
+ 		<link rel="apple-touch-icon" href="task.png">
 		<meta name="apple-mobile-web-app-capable" content="yes">
+		 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 		<link rel="stylesheet" href="css/reset.min.css">
 		<link rel="stylesheet prefetch" href="css/bootstrap.min.css">
 		<link rel="stylesheet prefetch" href="css/animate.min.css">
