Retry audio notice

--- a/index.html
+++ b/index.html
@@ -143,7 +143,11 @@
 			</h4>
 		</div>
 		
-		<embed height="1" width="1" src="ding.mp3" loop="false" id="finishsound"></embed>
+	
+		<audio src="ding.mp3" id="finishsound">
+The audio element is not currently supported by your browser, that only means you won’t get a notice when your time is running out.
+</audio>
+
 	
 		<script>
 			//controller
