--- a/index.html
+++ b/index.html
@@ -72,9 +72,13 @@
 						<br>
 					<div id="psetting add-control">
 						<div class="form-group has-feedback">
-							<input type="text" placeholder="💪 Working Time/min" id="ptime" class="form-control"><br>
-							<input type="button" id="pstart" class="form-control sbtn" value="Start Countdown"><br>
-							<input type="button" id="preset" class="form-control sbtn" value="Reset Time">
+							<input type="text" placeholder="💪 Working Time/min" id="ptime" class="form-control"></div>
+							<div class="form-group has-feedback">
+						
+							<input type="button" id="pstart" class="form-control sbtn" value="Start Countdown"></div>
+							<div class="form-group has-feedback">
+						
+							<input type="button" id="preset" class="form-control sbtn" value="Reset Time"></div>
 						</div>
 					</div>
 				</div>
