User-friendly small things

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 		
 	
 		<audio src="ding.mp3" id="finishsound">
-The audio element is not currently supported by your browser, that only means you won’t get a notice when your time is running out.
+The audio element is not currently supported by your browser, that only means you won’t get a notice when your time is up.
 </audio>
 
 	
