--- a/index.html
+++ b/index.html
@@ -75,10 +75,7 @@
 							<input type="text" placeholder="💪 Working Time/min" id="ptime" class="form-control"></div>
 							<div class="form-group has-feedback">
 						
-							<input type="button" id="pstart" class="form-control sbtn" value="Start Countdown"></div>
-							<div class="form-group has-feedback">
-						
-							<input type="button" id="preset" class="form-control sbtn" value="Reset Time"></div>
+							<input type="button" id="pstart" class="form-control sbtn" value="Start/Reset Countdown"></div>
 						</div>
 					</div>
 				</div>
