--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 						<br>
 					<div id="psetting add-control">
 						<div class="form-group has-feedback">
-													<input type="text" placeholder="📒 The name of the project" id="proj" class="form-control">
+													<input type="text" placeholder="📒 The name of the project" id="proj" class="form-control"><br>
 							<input type="text" placeholder="👨‍💻 Working Time/min" id="ptime" class="form-control"></div>
 							<div class="form-group has-feedback">
 						
@@ -95,10 +95,10 @@
 						<br>
 					<div id="setting add-control">
 						<div class="form-group has-feedback">
-							<input type="text" placeholder="💪 Working Time/min" id="worktime" class="form-control">							<input type="text" placeholder="🔌 Breaktime/min" id="breaktime" class="form-control"></div>
+							<input type="text" placeholder="💪 Working Time/min" id="worktime" class="form-control">			<br>				<input type="text" placeholder="🔌 Breaktime/min" id="breaktime" class="form-control"></div>
 							<div class="form-group has-feedback">
 						
-							<input type="button" id="start" class="form-control sbtn" value="Start/Reset Workbreak Timer"></div>
+							<input type="button" id="starty" class="form-control sbtn" value="Start/Reset Workbreak Timer"></div>
 						</div>
 					</div>
 				</div>
