--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
 		</div>
 		
 	
-		<audio src="ding.mp3" id="finishsound">
-The audio element is not currently supported by your browser, that only means you won’t get a notice when your time is up.
+		<audio id="finishsound">
+<source	src="ding.mp3"/>
 </audio>
 
 	
