ios safari test

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
 				background: #fff;
 				font: 14px 'vffree72', sans-serif;
 			}
+			
+			#starty, #pstart, #ppause
+			{
+			    cursor: pointer;
+			}
 		</style>
 	</head>
 	<body class="body">
