--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 				$("#blankp").toggle();
 			});
 			$("#regtoggle").click(function(){
-				window.location.href = "reg.html";
+				window.location.href = "https://scris.github.io/scristask-register/signup/signup.html";
 			});
 			//leancloud-av
 			var APP_ID = 'C7SVWNehvavYoUH5cssIKYDH-MdYXbMMI';
