--- a/index.html
+++ b/index.html
@@ -174,6 +174,18 @@
 
 	
 		<script>
+			  var currentUser = AV.User.current();
+			  if (currentUser) {
+				 //nothing to show
+			  }
+			  else {
+				$("#login").show();
+				$("#taskmain").hide();
+				$("#btimer").hide();
+				$("#ptimer").hide();
+				$("#blankb").hide();
+				$("#blankp").hide();
+			  }
 			//controller
 			$("#logintoggle").click(function(){
 				$("#login").show();
