--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 		<script src="js/jquery-3.3.1.min.js">
 		</script>
 		<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
-		<script src="js/airtable.browser.js"></script>
 		<script src="js/av-min.js"></script>
 		<meta name="viewport" content="minimal-ui,width=device-width"/>	
  		<link rel="apple-touch-icon" href="task.png">
@@ -63,6 +62,19 @@
 					</ul>
 				</div>
 			</div>
+			
+			<div class="container" id="blankn"></div>
+			
+			<div class="row" id="note">
+				<div class="col-md-4 col-md-offset-4 col-xs-6 col-xs-offset-3">
+					<div id="add-control">
+						<div class="form-group has-feedback">
+							<textarea type="text" id="notearea" placeholder="Enter Note (will be stored on the server forerver……)" class="form-control sbtn"></textarea>
+							<span id="noteid" style="display: none;"></span>
+						</div>
+					</div>
+				</div>
+			</div>
 							
 			<div class="container" id="blankp" style="display: none;"></div>
 			
@@ -77,12 +89,13 @@
 						<br>
 					<div id="psetting add-control">
 						<div class="form-group has-feedback">
-													<input type="text" placeholder="📒 The name of the project" id="proj" class="form-control"><br>
-							<input type="text" placeholder="👨‍💻 Working Time/min" id="ptime" class="form-control"></div>
-							<div class="form-group has-feedback">
-						
+							<input type="text" placeholder="📒 The name of the project" id="proj" class="form-control"><br>
+							<input type="text" placeholder="👨‍💻 Working Time/min" id="ptime" class="form-control">
+						</div>
+						<div class="form-group has-feedback">
 							<input type="button" id="pstart" class="form-control sbtn" value="Start/Reset Countdown">	<br>
-							<input type="button" id="ppause" class="form-control sbtn" value="Pause"></div>
+							<input type="button" id="ppause" class="form-control sbtn" value="Pause">
+						</div>
 						</div>
 					</div>
 				</div>
@@ -161,8 +174,8 @@
 			<h4>
 				Copyright &copy; 2015-2018 Scris Game Studio.<br><br><br>
 				Some CSS is from <a href="http://quentincolus.com/about.html">Quentin</a>.<br><br><br>
-				Every task here will soon be vanished tomorrow, however you can edit the time <a href="how.html">here</a>.<br><br><br><br>
-				<a id="logintoggle">Login</a> | <a id="regtoggle">Register</a> | <a id="ptimertoggle">Project Timer</a> | <a id="btimertoggle">Work &amp; Break Timer</a>
+				Every task here will soon be vanished tomorrow.<br><br><br><br>
+				<span id="haventloggedin"><a id="logintoggle">Login</a> | <a id="regtoggle">Register</a></span><span id="loggedin"><a id="logouttoggle">Log out</a></span> | <a id="ptimertoggle">Project Timer</a> | <a id="btimertoggle">Work &amp; Break Timer</a>
 				<br><br><br>
 			</h4>
 		</div>
@@ -181,20 +194,26 @@
 				$("#taskmain").hide();
 				$("#btimer").hide();
 				$("#ptimer").hide();
+				$("#note").hide();
 				$("#blankb").hide();
 				$("#blankp").hide();
+				$("#blankn").hide();
 			});
 			$("#btimertoggle").click(function(){
 				$("#taskmain").show();
+				$("#note").show();
 				$("#btimer").toggle();
 				$("#login").hide();
 				$("#blankb").toggle();
+				$("#blankn").show();
 			});
 			$("#ptimertoggle").click(function(){
 				$("#taskmain").show();
+				$("#note").show();
 				$("#ptimer").toggle();
 				$("#login").hide();
 				$("#blankp").toggle();
+				$("#blankn").show();
 			});
 			$("#regtoggle").click(function(){
 				window.location.href = "https://scris.github.io/scristask-register/signup/signup.html";
