--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
    
 				<div class="col-md-4 col-md-offset-4 col-xs-6 col-xs-offset-3 pclock">
 						<div id="pomotoro add-control">
-							<span id="pminute">52</span>
+							<span id="pminute">Timer haven't started 00</span>
 							<span>:</span>
 							<span id="psecond">00</span>
 						</div>
@@ -105,7 +105,7 @@
 			<div class="row" id="btimer" style="display: none;">
 				<div class="col-md-4 col-md-offset-4 col-xs-6 col-xs-offset-3 pclock">
 					<div id="pomotoro add-control">
-						<span id="minute">52</span>
+						<span id="minute">Timer haven't started 00</span>
 						<span>:</span>
 						<span id="second">00</span>
 					</div>
