timer huge update

--- a/index.html
+++ b/index.html
@@ -89,12 +89,14 @@
 						<br>
 					<div id="psetting add-control">
 						<div class="form-group has-feedback">
-							<input type="text" placeholder="📒 The name of the project" id="proj" class="form-control"><br>
+							<input type="text" placeholder="📒 The name of the project" id="proj" class="form-control">
+							<br>
 							<input type="text" placeholder="👨‍💻 Working Time/min" id="ptime" class="form-control">
 						</div>
 						<div class="form-group has-feedback">
-							<input type="button" id="pstart" class="form-control sbtn" value="Start/Reset Countdown">	<br>
-							<input type="button" id="ppause" class="form-control sbtn" value="Pause">
+							<input type="button" id="pstart" class="form-control sbtn" value="Start Countdown"><br>
+							<input type="button" id="ppause" class="form-control sbtn" value="Pause"><br>
+							<input type="button" id="pclear" class="form-control sbtn" value="Reset">
 						</div>
 						</div>
 					</div>
@@ -111,13 +113,15 @@
 					</div>
 					<br>
 				<div id="setting add-control">
-					<div class="form-group has-feedback">
+					<div class="form-group has-feedback" id="inputy">
 						<input type="text" placeholder="💪 Working Time/min" id="worktime" class="form-control">
 						<br>
 						<input type="text" placeholder="🔌 Breaktime/min" id="breaktime" class="form-control">
 					</div>
 					<div class="form-group has-feedback">
-						<input type="button" id="starty" class="form-control sbtn" value="Start/Reset Workbreak Timer">
+						<input type="button" id="starty" class="form-control sbtn" value="Start Workbreak Timer">
+						<br>
+						<input type="button" id="bclear" class="form-control sbtn" value="Reset Timer">
 					</div>
 					</div>
 				</div>
