add support for longterm/planning/routine tasks

--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@
 			<h4>
 				Copyright &copy; 2015-2018 Scris Game Studio.<br><br><br>
 				Some CSS is from <a href="http://quentincolus.com/about.html">Quentin</a>.<br><br><br>
-				Every task here will soon be vanished tomorrow.<br><br><br><br>
+				Every task here will soon be vanished tomorrow,<br><br><br>
+				but if you put [longterm] [plan] or [routine] in front of your task's name, it won't be disappeared.<br><br><br><br>
 				<span id="haventloggedin"><a id="logintoggle">Login</a> | <a id="regtoggle">Register</a></span><span id="loggedin"><a id="logouttoggle">Log out</a></span> | <a id="ptimertoggle">Project Timer</a> | <a id="btimertoggle">Work &amp; Break Timer</a>
 				<br><br><br>
 			</h4>
@@ -191,7 +192,7 @@
 
 	
 		<script>
-
+			$("#loadingbar").show():
 			//controller
 			$("#logintoggle").click(function(){
 				$("#login").show();
