: is too too too too bad

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html>
 	<head>
 		<meta charset="UTF-8">
 		<title>
@@ -247,7 +247,7 @@
 		<script src="js/ptimer.js"></script>
 		<script src="js/btimer.js"></script>
 		<script>
-		$("#loadingbar").hide():
+			$("#loadingbar").hide():
 		</script>
 	</body>
 
