--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 		<div class="container" id="blankatlast"></div>
 		
 		<script>
-			$("#loadingbar").show():
+			$("#loadingbar").show();
 			//controller
 			$("#logintoggle").click(function(){
 				$("#login").show();
@@ -247,7 +247,7 @@
 		<script src="js/ptimer.js"></script>
 		<script src="js/btimer.js"></script>
 		<script>
-			$("#loadingbar").hide():
+			$("#loadingbar").hide();
 		</script>
 	</body>
 
