--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 						</i>
 						Oops! Please enter name item.
 					</p>
-					<p class="text-center" id="loadingbar">
-						<h4>Loading tasks ……</h4>
-					</p>
+					<h4 class="text-center" id="loadingbar">
+						Loading tasks ……
+					</h4>
 					<p class="no-items text-muted text-center hidden">
 						<i class="fa fa-ban">
 						</i>
