--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 				Some CSS is from <a href="http://quentincolus.com/about.html">Quentin</a>.<br><br><br>
 				Every task here will soon be vanished tomorrow,<br><br><br>
 				if you don’t put [longterm] [plan] or [routine] in front of your task's name.<br><br><br><br>
-				<span id="haventloggedin"><a id="logintoggle">Login</a> | <a id="regtoggle">Register</a></span><span id="loggedin"><a id="logouttoggle">Log out</a></span> | <a id="ptimertoggle">Project Timer</a> | <a id="btimertoggle">Work &amp; Break Timer</a>
+				<span id="haventloggedin"><a id="logintoggle">Login</a> | <a id="regtoggle">Register</a></span><span id="loggedin"><a id="logouttoggle">Log out</a></span> | <a id="ptimertoggle">Project Timer</a> | <a id="btimertoggle">Work &amp; Break Timer</a> | <a href="https://github.com/scris/scristask/" target="_self">Github</a> | <a>1.2.2</a>
 				<br><br><br>
 			</h4>
 		</div>
@@ -232,7 +232,7 @@
 				$("#blankn").show();
 			});
 			$("#regtoggle").click(function(){
-				window.location.href = "https://scris.github.io/scristask-register/signup/signup.html";
+				window.location.href = "/signup/signup.html";
 			});
 			
 			//localstorage
